# knak

./: CMakeLists.txt  README.md  knak.ini
include/: data.h  document.h  mainapp.h  util.h  window.h
src/: data.cpp  document.cpp  main.cpp  mainapp.cpp  util.cpp  window.cpp  window.h~
